# forgesia

./: CLAUDE.md  README.md  pyproject.toml
src/forgesia/: __init__.py  calibration.py
src/forgesia/graph/: __init__.py  model.py  traversal.py
src/forgesia/inference/: __init__.py  belief.py
src/forgesia/propagation/: __init__.py  cpt.py  vine_rot.py
src/forgesia/risk/: __init__.py  scoring.py
src/forgesia/structure/: __init__.py  learning.py
tests/: test_graph.py  test_inference.py  test_propagation.py  test_structure_risk.py
